# Prism

./: .env.example  .gitignore  LICENSE  Model.ipynb  PrismModel.pth  README.md  gui.py  pyproject.toml  requirements.txt
dataset/: SOURCE_LICENSES.md  config.py  deduplicator.py  pipeline.py  preprocess.py  verify.py
dataset/scrapers/: __init__.py  base.py  coco.py  inaturalist.py  open_images.py  places365.py  wikimedia.py
docs/: computational_graph.md
